syntax = "proto3";

message Person {
  string name = 1;
  string email = 2;
  string biography = 3;
  string website = 4;
  string githubHandle = 5;
  string twitterHandle = 6;
  string youtubeHandle = 7;
}

message NewPerson {
    Person person = 1;
}
